[gd_scene load_steps=10 format=3 uid="uid://bjhd7u0qrknsx"]

[ext_resource type="Texture2D" uid="uid://jqubygcw8x8t" path="res://ph/40bb44d05c4a289cbea45f73a9013134.jpg" id="1_3cd0j"]
[ext_resource type="Script" uid="uid://br81bpqpso6cd" path="res://scenesssssssss/start_bedroom.gd" id="2_jka5c"]
[ext_resource type="AudioStream" uid="uid://cgek4naswsfhr" path="res://sfx/759616__froey__phone-notification-on-vibrate.wav" id="3_2qsre"]
[ext_resource type="Texture2D" uid="uid://dm7hye0ta24bl" path="res://ph/buttons_PNG176.png" id="4_2qsre"]
[ext_resource type="AudioStream" uid="uid://cbb16gs6fsfmi" path="res://sfx/572702__trp__180711-morning-early-night-hawk-robins-summer-toronto.mp3" id="4_cnhfx"]
[ext_resource type="AudioStream" uid="uid://bjo36rpjj3bnp" path="res://sfx/829979__kanaizo__reflective-ambience-1.wav" id="6_cnhfx"]
[ext_resource type="Texture2D" uid="uid://csqmfknj6335d" path="res://ph/412QYpr7RyL._UF894,1000_QL80_.jpg" id="7_s5wgs"]
[ext_resource type="Script" uid="uid://cl5dnpp3saop0" path="res://scenesssssssss/vacuum_handle.gd" id="8_wlggr"]
[ext_resource type="Script" uid="uid://bsuqb6je37awl" path="res://scenesssssssss/dirt.gd" id="9_wlggr"]

[node name="Main_Image" type="TextureRect"]
offset_top = -85.0
offset_right = 580.0
offset_bottom = 350.0
scale = Vector2(1.9860594, 1.7082522)
texture = ExtResource("1_3cd0j")
script = ExtResource("2_jka5c")

[node name="2" type="Node" parent="."]

[node name="TextureButton" type="TextureButton" parent="2"]
offset_left = 1044.0001
offset_top = 644.0
offset_right = 1684.0001
offset_bottom = 964.0
rotation = -1.5803051
scale = Vector2(1, 0.321167)
texture_hover = ExtResource("4_2qsre")

[node name="Books" type="TextureButton" parent="2"]
offset_left = 741.00006
offset_top = 419.0
offset_right = 781.00006
offset_bottom = 459.0
scale = Vector2(3.458859, 3.458859)

[node name="RichTextLabel" type="RichTextLabel" parent="2"]
offset_left = 60.0
offset_top = 556.0
offset_right = 415.0
offset_bottom = 596.0

[node name="vacuum_handle" type="TextureRect" parent="2"]
offset_top = -85.0
offset_right = 894.0
offset_bottom = 809.0
scale = Vector2(0.15828253, 0.15828253)
texture = ExtResource("7_s5wgs")
script = ExtResource("8_wlggr")

[node name="Wind" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cnhfx")
volume_db = -26.605
autoplay = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cnhfx")
volume_db = -16.324

[node name="dirt3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 189.82318
offset_top = 309.67328
offset_right = 229.82318
offset_bottom = 349.67328
scale = Vector2(0.20458725, 0.20458725)
script = ExtResource("9_wlggr")

[node name="dirt4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 253.26532
offset_top = 323.72266
offset_right = 293.26532
offset_bottom = 363.72266
scale = Vector2(0.20458725, 0.20458725)
script = ExtResource("9_wlggr")

[node name="dirt5" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 403.31116
offset_top = 399.82388
offset_right = 443.31116
offset_bottom = 439.82388
scale = Vector2(0.09498718, 0.14248042)
script = ExtResource("9_wlggr")

[node name="1" type="Node" parent="."]

[node name="EyesClosed" type="ColorRect" parent="1"]
visible = false
offset_left = -10.999999
offset_top = -11.999992
offset_right = 29.0
offset_bottom = 28.000008
scale = Vector2(29.181875, 16.71018)
color = Color(0, 0, 0, 1)

[node name="Alarm" type="AudioStreamPlayer" parent="1"]
stream = ExtResource("3_2qsre")

[connection signal="pressed" from="2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="2/Books" to="." method="_on_books_pressed"]
[connection signal="mouse_entered" from="dirt3" to="dirt3" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="dirt4" to="dirt4" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="dirt5" to="dirt5" method="_on_mouse_entered"]
[connection signal="finished" from="1/Alarm" to="." method="_on_alarm_finished"]
